--- a/http/a/main.css
+++ b/http/a/main.css
@@ -31,6 +31,8 @@ body {
 }
 .blk { display: block }
 .ib { display: inline-block }
+.flex { display: -webkit-flex; display: flex }
+.flex > * { webkit-flex: 1; flex: 1 }
 [hidden], .target:not(:target), #content > .sctrls { display: none }
 .rel, .comment { position: relative }
 .abs, .ctrls { position: absolute }
@@ -44,7 +46,7 @@ body {
 .nomar, body, input, .comment .hover *, fieldset, textarea, .error * { margin: 0 }
 .tumar, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 2px }
 .sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
-.umar:not(:first-child), :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
+.umar:not(:first-child), :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
 .bumar:not(:first-child), h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 8px }
 .bmar, .error, .half, #content, aside.rit, #notifs li { margin-bottom: 6px }
 .lftpad, .user { margin-left: 6px }
@@ -56,7 +58,7 @@ body {
 .scrly, #sidebar { overflow-y: auto }
 .noscrl { overflow: hidden }
 .br, .desc, aside.rit { border-radius: 4px }
-.hglt, .desc, .comment, section, article { background: rgba(255, 255, 255, 0.4) }
+.hglt, .desc, .comment, article { background: rgba(255, 255, 255, 0.4) }
 .shglt, #content, #sidebar, #footer { background: rgba(255, 255, 255, 0.8) }
 code, iframe:not([seamless]) { background: #fff }
 code { padding: 2px; }
@@ -72,6 +74,14 @@ abbr { border-bottom: 1px dashed #222 }
 .red { color: #f00 }
 .large { font-size: 1.2em }
 .larger, .ctrls { font-size: 1.4em }
+.column-small { -webkit-column-width: 10em; -moz-column-width: 10em; column-width: 10em }
+.column-medium { -webkit-column-width: 16em; -moz-column-width: 16em; column-width: 16em }
+.column-large { -webkit-column-width: 24em; -moz-column-width: 24em; column-width: 24em }
+li {
+	-webkit-column-break-inside: avoid;
+	page-break-inside: avoid;
+	break-inside: avoid-column;
+}
 .spoiler { transition: color 0.2s }
 .spoiler:not(:hover) { color: transparent }
 .spoiler:not(:hover) *, .spoiler:hover::before { opacity: 0 }
@@ -501,6 +511,17 @@ textarea {
 	body { font-size: 0.9em }
 }
 aside.rit { background: rgba(255, 255, 100, 0.5) }
+@media (min-width: 480px) {
+	.resp-flex { display: -webkit-flex; display: flex }
+	.resp-flex > * { webkit-flex: 1; flex: 1 }
+}
+@media (min-width: 550px) {
+	section {
+		padding: 4px;
+		background: rgba(255, 255, 255, 0.4);
+	}
+	.resp-flex > section:not(:first-child) { margin-left: 6px }
+}
 @media (min-width: 701px) {
 	.half { float: left }
 	.half.rit, .half:not(.rit) + .half:last-child { float: right }
