Increase input font size

--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -32,7 +32,7 @@ body {
 	animation: target 1s;
 	-webkit-animation: target 1s;
 }
-.blk { display: block }
+.blk, textarea { display: block }
 .ib { display: inline-block }
 .flex { display: -webkit-flex; display: flex }
 .flex > * { webkit-flex: 1; flex: 1 }
@@ -364,11 +364,7 @@ a.blk:hover, a.blk:active { background: #222 }
 a.blk:hover:not(:active) { color: #ff2 }
 input[type=text], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
-	font-size: 0.8em;
-}
-textarea {
-	font-size: 0.9em;
-	display: block;
+	font-size: 1rem;
 }
 .score {
 	float: left;
