--- a/http/a/main.css
+++ b/http/a/main.css
@@ -37,7 +37,7 @@ body {
 .rel, .comment { position: relative }
 .abs, .ctrls { position: absolute }
 .fullwidth { width: 100% }
-.maxwidth, img { max-width: 100% }
+.maxwidth, img, input { max-width: 100% }
 .rit, .user, h1 small, h2 small, .c-sig { float: right }
 .lft, .row > :not(.rit):not(.sidebar):not(.half):not(.program), .user > * { float: left }
 .nofloat { float: none }
@@ -358,6 +358,7 @@ a.blk {
 }
 a.blk:hover, a.blk:active { background: rgba(255, 255, 255, 0.2) }
 a.blk:active { color: #00f }
+input[type=text], input[type=password] { width: 18em }
 input[type=text], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: 1rem;
