--- a/http/login/login.css
+++ b/http/login/login.css
@@ -9,7 +9,23 @@ form div { margin: 0.2em 0 }
 	width: 18em;
 	max-width: 100%;
 }
-#submit { display: block }
+#submit {
+	display: block;
+	margin: 8px 0;
+	font-size: 16px;
+	padding: 4px 8px;
+	background: #6cf;
+	border-radius: 4px;
+	border: 0.5px solid #666;
+	transition: background-color 0.2s;
+	box-shadow: 1px 1px 3px #666;
+}
+#submit:hover { background: #7df }
+#submit:active { background: #0bf }
+#submit:disabled {
+	background: #fff;
+	transition: none;
+}
 #sec { font-size: 0 }
 #sec::before, #sec input { font-size: 1rem }
 #sec input { width: 10em }
