--- a/http/a/main.css
+++ b/http/a/main.css
@@ -631,11 +631,11 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	#content { margin-top: 6px }
 	#content:nth-child(2):nth-last-child(3) {
 		float: left;
-		width: calc(-250px + 80%);
+		width: calc(-156px + 66%);
 	}
 	#sidebar {
 		float: right;
-		width: calc(94px + 16%);
+		width: 30%;
 		margin: 6px 0;
 	}
 	#nav {
