--- a/http/dev/docs.css
+++ b/http/dev/docs.css
@@ -1,3 +1,18 @@
+#ides { max-width: 1800px }
+#ides a {
+	background: rgba(16, 140, 255, .8);
+	transition: background .2s;
+	color: #000;
+	display: block;
+	text-decoration: none;
+}
+#ides a:hover { background: rgba(24, 160, 255, .8) }
+#ides img {
+	display: block;
+	background: #000;
+	padding: 4px;
+	border-radius: 4px;
+}
 #ta-cont {
 	margin-bottom: 8px;
 	position: relative;
