--- a/http/a/main.css
+++ b/http/a/main.css
@@ -30,7 +30,7 @@ body {
 	animation: target 1s;
 	-webkit-animation: target 1s;
 }
-.blk, textarea { display: block }
+.blk, img.center, textarea { display: block }
 .ib { display: inline-block }
 .inline, summary * { display: inline }
 .flex { display: -webkit-flex; display: flex }
@@ -80,12 +80,22 @@ abbr { border-bottom: 1px dashed #222 }
 .column-small { -webkit-column-width: 10em; -moz-column-width: 10em; column-width: 10em }
 .column-medium { -webkit-column-width: 16em; -moz-column-width: 16em; column-width: 16em }
 .column-large { -webkit-column-width: 24em; -moz-column-width: 24em; column-width: 24em }
+.highlight {
+	color: #fff;
+	background: #000;
+}
 del { background: #f88 }
 ins { background: #8f8 }
 li {
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
 	break-inside: avoid-column;
+}
+.justify { text-align: justify }
+.justify::after {
+	content: '';
+	display: inline-block;
+	width: 100%;
 }
 .spoiler { transition: color 0.2s }
 .spoiler:not(:hover) { color: transparent }
