--- a/http/dev/html.css
+++ b/http/dev/html.css
@@ -2,10 +2,10 @@
 *::-moz-placeholder { color: #999 }
 html, #content, #footer, #main { background: #000 }
 #main { padding: 0 }
-#content { padding: 0 4px }
+#content { padding-bottom: 0 }
 #main a:hover { color: #4ff }
 #main a:active { color: #06f }
-#main :not(input):not(button):not(.red):not(a), #main a:not(:hover):not(:active):not(.red), #footer * { color: #fff }
+#main :not(input):not(button):not(.red):not(a):not(textarea):not(span), #main a:not(:hover):not(:active):not(.red), #footer * { color: #fff }
 #meta {
 	clear: both;
 	padding: 4px;
@@ -13,24 +13,10 @@ html, #content, #footer, #main { background: #000 }
 	background: rgba(255, 255, 255, .8);
 	color: #000;
 }
-#main textarea {
-	color: #fff;
-	background: #000;
-	font-family: monospace;
-	font-size: 1rem;
-	width: 100%;
-	margin: 4px 0;
-}
-#main textarea:first-child { margin-top: 0 }
+.ta-cont { height: calc(33.3% - 4px) }
 #edit-title {
 	width: 400px;
 	max-width: 100%;
-}
-#main textarea, #output {
-	max-width: 100%;
-	border: 1px solid #fff;
-	outline: none;
-	white-space: pre;
 }
 #output {
 	width: 100%;
@@ -48,10 +34,6 @@ html, #content, #footer, #main { background: #000 }
 	}
 	#left { float: left }
 	#right { float: right }
-}
-textarea {
-	height: calc(33.33% - 2px);
-	resize: none;
 }
 #save.progress {
 	cursor: progress;
